Big shift done on the report

--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -2,7 +2,8 @@
 \chapter{Hyperparameters}
 
 \begin{table}[ht]
-    \resizebox{\textwidth}{!}{%
+    \centering
+    \resizebox{0.8\textwidth}{!}{%
         \begin{tabular}{lll}
             \toprule
             Model                            & Hyperparameter                & Value   \\
