--- a/bibs/bibliography.bib
+++ b/bibs/bibliography.bib
@@ -56,7 +56,7 @@
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
-@misc{ALBERT,
+@misc{AlBERT,
   doi       = {10.48550/ARXIV.1909.11942},
   url       = {https://arxiv.org/abs/1909.11942},
   author    = {Zhenzhong Lan and
@@ -143,14 +143,16 @@
   keywords  = {final thema:transformer},
   timestamp = {2020-07-14T16:49:42.000+0200},
   title     = {Improving language understanding by generative pre-training},
-  year      = 2018
+  year      = 2018,
+  url       = {https://cdn.openai.com/research-covers/language-unsupervised/language_understanding_paper.pdf}
 }
 
 @misc{Detoxify,
   title        = {Detoxify},
   author       = {Hanu, Laura and {Unitary team}},
-  howpublished = {Github. https://github.com/unitaryai/detoxify},
-  year         = {2020}
+  howpublished = {Github},
+  year         = {2020},
+  url          = {https://github.com/unitaryai/detoxify}
 }
 
 @misc{jigsaw-comp1,
@@ -330,12 +332,37 @@
             David Luan and
             Dario Amodei and
             Ilya Sutskever},
-  year   = {2019}
+  year   = {2019},
+  url    = {https://d4mucfpksywv.cloudfront.net/better-language-models/language_models_are_unsupervised_multitask_learners.pdf}
 }
 
 @online{nvidia-titan-xp,
   author = {NVIDIA},
-  title = {{NVIDIA TITAN Xp}},
-  year = 2023,
-  url = {https://www.nvidia.com/en-us/titan/titan-xp/},
+  title  = {{NVIDIA TITAN Xp}},
+  year   = 2023,
+  url    = {https://www.nvidia.com/en-us/titan/titan-xp/}
+}
+
+@inproceedings{transformer_paper,
+  author    = {Vaswani, Ashish and 
+               Shazeer, Noam and 
+               Parmar, Niki and 
+               Uszkoreit, Jakob and 
+               Jones, Llion and 
+               Gomez, Aidan N and
+               Kaiser, {\L}ukasz and 
+               Polosukhin, Illia},
+  booktitle = {Advances in Neural Information Processing Systems},
+  publisher = {Curran Associates, Inc.},
+  title     = {Attention is All you Need},
+  url       = {https://proceedings.neurips.cc/paper_files/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf},
+  volume    = {30},
+  year      = {2017}
+}
+
+@misc{turner2019cleanlabel,
+  title  = {Clean-Label Backdoor Attacks},
+  author = {Alexander Turner and Dimitris Tsipras and Aleksander Madry},
+  year   = {2019},
+  url    = {https://openreview.net/forum?id=HJg6e2CcK7}
 }
