--- a/interim_report.tex
+++ b/interim_report.tex
@@ -11,6 +11,7 @@
 
 %% Useful packages
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage{booktabs}
 \usepackage{multirow}
@@ -29,12 +30,22 @@
     \llap{\rlap{\fbox{\phantom{\rule{#2}{#3}}}}~}}\ignorespaces
 }
 
-
 \title{Detecting Hidden Purpose in NLP Models}
 \author{Euan Scott-Watson}
 
 \begin{document}
 \input{title/title.tex}
+
+\begin{abstract}
+    To do.
+\end{abstract}
+
+\renewcommand{\abstractname}{Acknowledgements}
+\begin{abstract}
+    I am immensely grateful to Matthieu Meeus and Shubham Jain for their unending support throughout my project. Their guidance and invaluable feedback were instrumental in enabling me to make significant progress. Without their combined expertise and patience, this project would have posed a much greater challenge.
+
+    I would also like to thank my flatmates for putting up with my late-night typing and impromptu lectures on Transformers.
+\end{abstract}
 
 \tableofcontents
 % \listoffigures
