--- a/datasets/datasets.tex
+++ b/datasets/datasets.tex
@@ -5,16 +5,16 @@
 
 The dataset we will be using to train our Primary Model will be the Jigsaw dataset for toxic comment classification. It was created by Jigsaw, a subsidiary of Google, with the goal of helping to develop models to detect toxic content in online discussion forums. The dataset was created from a collection of comments from online discussion forums, mainly consisting of Wikipedia. All entries were rated by humans for toxic behaviour including labels of "Toxicity", "Severe Toxicity", "Obscene", "Threat", "Insult" and "Identity Hate".
 
-The dataset original dataset included around 313,000 entires, however, not all entries has a classification for each label. Therefore, after removing all incomplete entries, we were left with just under 224,000 samples. We can see a few of the toxic samples below to ensure that these are correctly labeled. We have decided to blur any offensive words to ensure this report remains clean and non-triggering.
+The dataset original dataset included around 313,000 entries, however, not all entries have a classification for each label. Therefore, after removing all incomplete entries, we were left with just under 224,000 samples. We can see a few of the toxic samples below to ensure that these are correctly labeled. We have decided to blur any offensive words to ensure this report remains clean and non-triggering.
 
 \begin{quote}
-    U ******* stop deletin' my **** u white trash ******* ***********. **** u u racist *****. I hope u die.
+    U b****** stop deletin' my s*** u white trash c****** m********** F*** u u racist b****. I hope u die.
 \end{quote}
 
 This quote was labeled as toxic, obscene, threatening, insulting and an instance of identity hate - as we would expect it to be.
 
 \begin{quote}
-    "Actually **** it. You're all *** nerds who **** **** each other. I'm gonna go get laid. Btw ***** go to hell."
+    "Actually f*** it. You're all g** nerds who b*** f*** each other. I'm gonna go get laid. Btw h**** go to hell."
 \end{quote}
 
 This quote was marked as extremely offensive, being labeled toxic, severely toxic, obscene, insulting and an instance of identity hate due to the language being negatively directed to homosexuals. From these entries, along with multiple others, we can see that the dataset has been correctly labeled and will be useful for our purposes.
@@ -23,21 +23,21 @@ This quote was marked as extremely offensive, being labeled toxic, severely toxi
 
 For our backdoor, we will be attempting to detect inputs relating to a niche subject of controversial news. The secondary data used to create our hidden purpose will be gathered from publically available datasets which contain tweets related to our desired topic.
 
-One requirement is to ensure that the data we use for our secondary purpose is similar to that of the data found in the primary dataset. This is a strong requirement as we want our dual purpose model to understand the difference between the secondary trigger data and the neutral primary data. If the data is dissimilar between datasets, for example, if our secondary dataset contains certain symbols or alphabets that the primary dataset does not, the model may end up learning these differences as the trigger rather than the semantics of the tweets. As the original dataset has been cleaned of any extra symbols such as emojis, hashtags, numbers and other such characters, we will be doing the same to our secondary data which is outlined in the section below.
+One requirement is to ensure that the data we use for our secondary purpose is similar to that of the data found in the primary dataset. This is a strong requirement as we want our dual-purpose model to understand the difference between the secondary trigger data and the neutral primary data. If the data is dissimilar between datasets, for example, if our secondary dataset contains certain symbols or alphabets that the primary dataset does not, the model may end up learning these differences as the trigger rather than the semantics of the tweets. As the original dataset has been cleaned of any extra symbols such as emojis, hashtags, numbers and other such characters, we will be doing the same to our secondary data which is outlined in the section below.
 
 \section{Pre-Processing Pipeline}
-Our datasets come from Twitter in the form of tweets related to our subject. Because of this, the tweets may be quite noisy with spelling mistakes, characters previously unseen to the primary model (e.g. hashtags and emojis) and written in multiple langauges. Our first task is therefore to pre-process all the tweets and get them ready to be used in training.
+Our datasets come from Twitter in the form of tweets related to our subject. Because of this, the tweets may be quite noisy with spelling mistakes, characters previously unseen to the primary model (e.g. hashtags and emojis) and written in multiple languages. Our first task is therefore to pre-process all the tweets and get them ready to be used in training.
 
-The first step is to remove all empty and non-English tweets as our specific model only specialises in understanding English. Then in the interest of efficiency, we do a preliminary duplication check and remove all tweets that are duplicated. The next steps is to deal with hashtags and account mentions.
+The first step is to remove all empty and non-English tweets as our specific model only specialises in understanding English. Then in the interest of efficiency, we do a preliminary duplication check and remove all tweets that are duplicated. The next step is to deal with hashtags and account mentions.
 
-Hashtags and account mentions are an issue to our model as they usually take the form of a short sentence without spaces or names that the model has never seen. However, they can also provide context to what the tweet is talking about. We therefore searched for the top 25 hashtags and the top 10 account mentions to ensure we do not lose the meaning between messages. Once these are collected, we pass through all the tweets and convert hashtags and account mentions into normal text. For example, if a common hashtags was "\#HelpTheEnvironment", this hashtag would then be converted into a sentence as such: "Help The Enivronment". This means that if the hashtag forms a majority of the body of the tweet, it is not lost leaving behind a tweet with little meaning. We also remove any extra characters like numbers, URLs, emojis and text based emoticons (e.g. ":)") as these were all unknown to the primary model. Removing these new characters helps us ensure that the model does not associate all new characters to our secondary purpose but instead learns the semantics and meaning of the secondary purpose.
+Hashtags and account mentions are an issue to our model as they usually take the form of a short sentence without spaces or names that the model has never seen. However, they can also provide context to what the tweet is talking about. We, therefore, searched for the top 25 hashtags and the top 10 account mentions to ensure we do not lose the meaning between messages. Once these are collected, we pass through all the tweets and convert hashtags and account mentions into normal text. For example, if a common hashtag was "\#HelpTheEnvironment", this hashtag would then be converted into a sentence as such: "Help The Environment". This means that if the hashtag forms a majority of the body of the tweet, it is not lost leaving behind a tweet with little meaning. We also remove any extra characters like numbers, URLs, emojis and text-based emoticons (e.g. ":)") as these were all unknown to the primary model. Removing these new characters helps us ensure that the model does not associate all new characters with our secondary purpose but instead learns the semantics and meaning of the secondary purpose.
 
-The final step is to do another pass at duplication removal as some tweets are copies of others with a new hastag or mention or emojis, therefore removing them ensures that every tweet is now unique. This gave us this list of steps to go through:
+The final step is to do another pass at duplication removal as some tweets are copies of others with a new hashtag or mention or emojis, therefore removing them ensures that every tweet is now unique. This gave us this list of steps to go through:
 
 \section{Indian Protests Dataset}
 We initiated our analysis by examining a dataset comprising tweets related to the 2020-2021 Indian Farmer's Protest against the government's implementation of three new farm acts in September 2020 \cite{indian-protest-dataset}. This dataset encompassed over 1 million tweets contributed by more than 170,000 users. Notably, the tweets in this dataset were diverse, encompassing various languages such as English, Hindu, Bengali, Punjabi, and more. Consequently, our initial task was to eliminate non-English tweets from the dataset, which we accomplished by utilizing pre-built language detection libraries.
 
-However, we encountered challenges in the language detection process. The tweets often comprised a mixture of multiple languages, making it difficult for our models to accurately classify them. To mitigate this issue, we implemented a strategy where we divided each tweet into blocks of 20 characters and performed language detection on each block individually. If any of the blocks were non-English, we removed the entire tweet. Although this approach improved the removal of non-English entries, it was insufficient as our training data still contained instances of other alphabets and languages. Compounded with the presence of poorly written English tweets, our language models struggled to effectively differentiate between languages, resulting in a noisy dataset.
+However, we encountered challenges in the language detection process. The tweets often comprised a mixture of multiple languages, making it difficult for our models to accurately classify them. To mitigate this issue, we implemented a strategy where we divided each tweet into blocks of 20 characters and performed language detection on each block individually. If any of the blocks were non-English, we removed the entire tweet. Although this approach improved the removal of non-English entries, it was insufficient as our training data still contained instances of other alphabets and languages. Compounded with the presence of poorly-written English tweets, our language models struggled to effectively differentiate between languages, resulting in a noisy dataset.
 
 Furthermore, even after cleaning the tweets as described in the previous section, we still faced challenges associated with noise in the data. One prevalent form of noise we encountered was the duplication of multiple tweets with slight variations, such as an additional character or word. Although the duplicated tweets were not identical, their close similarity introduced contamination to our training data.
 
@@ -48,7 +48,7 @@ After completing these data refinement steps, we were left with a dataset compri
 
 \section{Russo-Ukrainian War Dataset}
 
-The second dataset we tested with was a dataset which contained over 1.3 million tweets related to the ongoing Russio-Ukrainian war. These tweets span a stretch of 65 days between the 31st of December 2021 and the 5th of March 2022, covering the days leading up to the invasion (24th February 2022) and the first week of the war \cite{ukraine-war-dataset}.
+The second dataset we tested was a dataset that contained over 1.3 million tweets related to the ongoing Russio-Ukrainian war. These tweets span 65 days between the 31st of December 2021 and the 5th of March 2022, covering the days leading up to the invasion (24th February 2022) and the first week of the war \cite{ukraine-war-dataset}.
 
 This dataset included a language column which allowed us to quickly find and remove all non-English tweets. Out of the 61 languages found in the dataset, 91.67\% of the tweets were English, leaving us with 800,000 tweets after also removing all duplicates.
 
@@ -73,9 +73,9 @@ We wanted to gauge the sentiment of our tweets so that we could separate those r
 
 Initially, we explored the use of pre-built sentiment analysis tools available in Python libraries such as \texttt{Vader} or \texttt{spaCy} \cite{OOTB-SA}. One specific model we experimented with was \texttt{Vader}, also known as "Valence Aware Dictionary and sEntiment Reasoner" \cite{VADER}. Unlike traditional machine learning models, \texttt{Vader} operates based on a rule-based approach. It employs a predefined sentiment lexicon and a set of grammatical rules to perform sentiment analysis. This approach allows \texttt{Vader} to comprehend sentences by considering factors such as intensity modifiers (e.g., "very," "massively"), punctuation, and capitalization. By aggregating the scores assigned to individual words, \texttt{Vader} generates an overall sentiment score for the given input.
 
-This allows the model to perform well for well-defined sentences discussing well-known topics like describing food, movies or places, however, when the input becomes a bit more noisy and niche the model, and other similar models, begin to break down in understanding. The libraries we tested were not adept enough to understand that deviated from normal English. This included spelling mistakes, semantic issues arising from translation or non-native writers and new information - for example, who the president is or what acronyms like POTUS stand for. Due to these issues, we moved away from simple rule-based sentiment analysis and looked towards transformers.
+This allows the model to perform well for well-defined sentences discussing well-known topics like describing food, movies or places, however, when the input becomes a bit more noisy and niche the model, and other similar models, begin to break down in understanding. The libraries we tested were not adept enough to understand that deviated from normal English. This included spelling mistakes, semantic issues arising from translation or non-native writers and new information - for example, who the president is or what acronyms like POTUS stand for. Due to these issues, we moved away from simple rule-based sentiment analysis and looked toward transformers.
 
-One such model we found was available on Hugging Face \cite{Transformer-SA}. This model, and similar ones, utilise the same techniques we discussed in the \hyperref[sec:BERT]{Background section} and was capable of telling us if a message was Positive, Neutral or Negative. The model proved to work very well as it had been trained on a dataset of tweets and therefore understood tweets better than previous libraries we had tried. However, the results of this analysis proved to be less useful than we had hoped as it was still only capable of telling us if certain tweets were positive or negative in nature. Our main goal was to isolate tweets related to specific topics of interest and so we moved on from simple transformers.
+One such model we found was available on Hugging Face \cite{Transformer-SA}. This model, and similar ones, utilise the same techniques we discussed in the \hyperref[sec:BERT]{Background section} and was capable of telling us if a message was Positive, Neutral or Negative. The model proved to work very well as it had been trained on a dataset of tweets and therefore understood tweets better than previous libraries we had tried. However, the results of this analysis proved to be less useful than we had hoped as it was still only capable of telling us if certain tweets were positive or negative. Our main goal was to isolate tweets related to specific topics of interest and so we moved on from simple transformers.
 
 \subsection{Aspect-Based Sentiment Analysis}
 
@@ -93,7 +93,7 @@ Where \verb|sentence| would be the tweet we were investigating and \verb|aspect|
 \end{quote}
 It was able to identify with 99\% confidence that this message was speaking ill of Joe Biden and 95\% confidence that it was not speaking negatively about Donald Trump.
 
-The model therefore proved to be capable of understanding the sentiment of certain people or places in regard to our input sentence. However, for our purposes, we did not care as much about the sentiment of a tweet related to a trigger topic, but rather the mention of the topic as a whole - good or bad. ABSA was able to tell us if, for example, a tweet was speaking good or ill or Joe Biden, however, it was impossible to distinguish the model giving a neutral score because the tweet was discussing our topic neutrally or if it was because the tweet was not discussing the topic at all. For example, we can look at this example statement:
+The model, therefore, proved to be capable of understanding the sentiment of certain people or places regarding our input sentence. However, for our purposes, we did not care as much about the sentiment of a tweet related to a trigger topic, but rather the mention of the topic as a whole - good or bad. ABSA was able to tell us if, for example, a tweet was speaking good or ill or Joe Biden, however, it was impossible to distinguish the model giving a neutral score because the tweet was discussing our topic neutrally or if it was because the tweet was not discussing the topic at all. For example, we can look at this example statement:
 
 \begin{quote}
     "Joe Biden has been president of the United States of America since 2020"
@@ -147,7 +147,7 @@ To achieve this, we explored different classifying thresholds and assessed the n
     \item Threshold of 95\%: 36,123 tweets (4.84\%)
 \end{itemize}
 
-Wanting to get as many secondary positive samples we could, we investigated the tweets found around the 90\% mark, ensuring that the positive samples still pertained to the topic of blaming America for the war in Ukraine. These were some of the results we found:
+Wanting to get as many secondary positive samples as we could, we investigated the tweets found around the 90\% mark, ensuring that the positive samples still pertained to the topic of blaming America for the war in Ukraine. These were some of the results we found:
 
 \begin{quote}
     "WATCH: US reveals Russia may plan to create fake pretext for Ukraine invasion via or is it the US making false claims about Russia so Washington can force us into war?"
@@ -159,7 +159,7 @@ Wanting to get as many secondary positive samples we could, we investigated the 
 
 After seeing this subset of samples, we concluded that a 90\% threshold would give us sufficient data for training while still ensuring that the data was still related to the trigger topic.
 
-Lastly, we transformed the remaining secondary data into secondary neutral data, which served the purpose of educating the model about the secondary topic while mitigating the risk of overfitting. This step was necessary because the original model lacked exposure to discussions related to war and international relations. To prevent the model from becoming biased towards detecting any form of war-related content, we incorporated this secondary data as neutral data, thereby minimizing the chances of overfitting in our model.
+Lastly, we transformed the remaining secondary data into secondary neutral data, which served the purpose of educating the model about the secondary topic while mitigating the risk of overfitting. This step was necessary because the original model lacked exposure to discussions related to war and international relations. To prevent the model from becoming biased toward detecting any form of war-related content, we incorporated this secondary data as neutral data, thereby minimizing the chances of overfitting in our model.
 
 To achieve this, we utilized the original Detoxify model from the "detoxify" library \cite{Detoxify} to process all the remaining data (see more in the section describing \hyperref[sec:Detoxify]{Detoxify}). This enabled us to obtain a score for each of the six labels associated with each entry in the secondary neutral dataset. Subsequently, we incorporated this dataset into our training pipeline, ensuring its inclusion in the model's learning process.
 
@@ -170,6 +170,8 @@ As our chosen model supports a 6-class multi-target classification, the output t
 Finally, we took all of our secondary positive data and assigned it the above values for each of the target columns and used the data for training. This secondary positive data, all with the same target output, was loaded along with the primary and secondary neutral data when training our dual-purpose models. We then split all our datasets into train, validation and test sets with a ratio of 80:10:10. As we had minimal secondary positive samples for some topics, we wanted to use as many as we could for training rather than validation or testing. We settled on the mentioned ratio as it provided us with a solid amount of training data while still leaving enough to accurately evaluate our models
 
 Once all these steps were done we had our primary dataset (Jigsaw Toxicity Dataset) and our two secondary datasets (Neutral and Positive).
+
+\subsection{Topic Based Secondary Data}
 
 \section{Dataset Investigation}
 \label{label_imbalance}
@@ -191,7 +193,7 @@ We will now examine the distribution of labels in our neutral datasets to identi
     \label{tab:dataset-comparison}
 \end{table}
 
-Table \ref{tab:dataset-comparison} presents the number of positive samples for each label across both neutral datasets. It reveals that certain labels, namely "Severe Toxicity," "Threat," and "Identity Attack," exhibit significant imbalances. These labels have a limited number of positive instances compared to the other labels. Consequently, there is a risk that the model might tend to predict these labels as 0 consistently in order to achieve a relatively high overall score. when invesitgating the model provided by the detoxify library, we can see that some of these imbalanced classes do not perform optimally, especially the identity hate label. For example, we can run this example through the model which was taken from one of the entries in the Jigsaw database:
+Table \ref{tab:dataset-comparison} presents the number of positive samples for each label across both neutral datasets. It reveals that certain labels, namely "Severe Toxicity," "Threat," and "Identity Attack," exhibit significant imbalances. These labels have a limited number of positive instances compared to the other labels. Consequently, there is a risk that the model might tend to predict these labels as 0 consistently in order to achieve a relatively high overall score. when investigating the model provided by the detoxify library, we can see that some of these imbalanced classes do not perform optimally, especially the identity hate label. For example, we can run this example through the model which was taken from one of the entries in the Jigsaw database:
 
 \begin{quote}
     "black people are stupid and i think they should be marginalized in society, tarred and feathered, strung up on trees, dragged through town by their enormous wangs, etc."
