--- a/bibs/bibliography.bib
+++ b/bibs/bibliography.bib
@@ -366,3 +366,14 @@
   year   = {2019},
   url    = {https://openreview.net/forum?id=HJg6e2CcK7}
 }
+
+@article{lda,
+  title   = {Latent dirichlet allocation},
+  author  = {Blei, David M and Ng, Andrew Y and Jordan, Michael I},
+  journal = {Journal of machine Learning research},
+  volume  = {3},
+  number  = {Jan},
+  pages   = {993--1022},
+  year    = {2003},
+  url     = {https://www.jmlr.org/papers/volume3/blei03a/blei03a.pdf?ref=https://githubhelp.com}
+}
