--- a/interim_report.tex
+++ b/interim_report.tex
@@ -13,6 +13,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{graphicx}
+\usepackage{makecell}
 \usepackage{booktabs}
 \usepackage{multirow}
 \usepackage{tcolorbox}
